--- a/IRemember/res/layout/activity_photo_capture.xml
+++ b/IRemember/res/layout/activity_photo_capture.xml
@@ -13,6 +13,15 @@
         android:visibility="visible"
         android:layout_centerInParent="true"/>
     
+    <VideoView 
+		android:paddingLeft="@dimen/activity_horizontal_margin"
+		android:paddingRight="@dimen/activity_horizontal_margin"
+		android:layout_height="wrap_content" 
+		android:layout_width="wrap_content" 
+		android:visibility="invisible"
+		android:layout_centerInParent="true"
+		android:id="@+id/videoView1" />
+    
     <RelativeLayout
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
