--- a/IRemember/res/layout/activity_recording.xml
+++ b/IRemember/res/layout/activity_recording.xml
@@ -26,7 +26,7 @@
         android:text="Play" />
 
     <Button
-        android:id="@+id/btSaveRecorder"
+        android:id="@+id/btGetlocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/btRecorder"
