--- a/IRemember/res/layout/fragment_add_screen.xml
+++ b/IRemember/res/layout/fragment_add_screen.xml
@@ -3,225 +3,236 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-
-<ScrollView 
-    android:id="@+id/ScrollView1"
+<RelativeLayout
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content" >
-
-	<RelativeLayout
-	    android:id="@+id/rlLayout"
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:paddingBottom="@dimen/activity_vertical_margin"
-	    android:paddingLeft="@dimen/activity_horizontal_margin"
-	    android:paddingRight="@dimen/activity_horizontal_margin"
-	    android:paddingTop="@dimen/activity_vertical_margin" >
-	
-	    <TextView
-	        android:id="@+id/textView1"
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content"
-	        android:layout_alignParentLeft="true"
-	        android:layout_alignParentTop="true"
-	        android:text="@string/IRemember" />
-	
-	
-	    <TextView
-	        android:id="@+id/textView2"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_alignLeft="@+id/textView1"
-	        android:layout_below="@+id/textView1"
-	        android:layout_marginTop="30dp"
-	        android:text="@string/title" />
-	
-	    <EditText
-	        android:id="@+id/etTitle"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_alignBaseline="@+id/textView2"
-	        android:layout_alignBottom="@+id/textView2"
-	        android:layout_alignRight="@+id/textView1"
-	        android:ems="10" android:inputType="text"/>
-	
-	    <TextView
-	        android:id="@+id/textView3"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_alignLeft="@+id/textView2"
-	        android:layout_below="@+id/etTitle"
-	        android:layout_marginTop="35dp"
-	        android:text="@string/body" />
-	
-	    <EditText
-	        android:id="@+id/etBody"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_alignBaseline="@+id/textView3"
-	        android:layout_alignBottom="@+id/textView3"
-	        android:layout_alignLeft="@+id/etTitle"
-	        android:ems="10" android:inputType="text">
-	
-	        <requestFocus />
-	    </EditText>
-	
-	    <TextView
-	        android:id="@+id/textView4"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_alignParentLeft="true"
-	        android:layout_below="@+id/etBody"
-	        android:layout_marginTop="34dp"
-	        android:text="@string/addAudioLink" />
-	
-	    <Button
-	        android:id="@+id/btRecorder"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_alignBaseline="@+id/textView4"
-	        android:layout_alignBottom="@+id/textView4"
-	        android:layout_alignRight="@+id/etBody"
-	        android:text="@string/AudioButton" />
-	
-	    <TextView
-	        android:id="@+id/textView5"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_alignRight="@+id/textView4"
-	        android:layout_below="@+id/btRecorder"
-	        android:layout_marginTop="40dp"
-	        android:text="@string/Addvideo" />
-	
-	    <Button
-	        android:id="@+id/btAddVideo1"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_alignBaseline="@+id/textView5"
-	        android:layout_alignBottom="@+id/textView5"
-	        android:layout_alignRight="@+id/btRecorder"
-	        android:text="@string/addVideoLink" />
-	
-	    <EditText
-	        android:id="@+id/etImageName"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_alignRight="@+id/btAddVideo1"
-	        android:layout_alignTop="@+id/textView6"
-	        android:ems="10" android:inputType="text"/>
-	
-	    <TextView
-	        android:id="@+id/textView6"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_alignLeft="@+id/textView4"
-	        android:layout_below="@+id/btAddVideo1"
-	        android:layout_marginTop="32dp"
-	        android:text="@string/imageName" />
-	
-	    <Button
-	        android:id="@+id/btAddPhoto"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_alignRight="@+id/etImageName"
-	        android:layout_below="@+id/etImageName"
-	        android:layout_marginTop="14dp"
-	        android:text="@string/btAddPhoto" />
-	
-	    <TextView
-	        android:id="@+id/textView7"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_alignLeft="@+id/textView5"
-	        android:layout_below="@+id/btAddPhoto"
-	        android:layout_marginTop="18dp"
-	        android:text="@string/storyTime" />
-	
-	    <TextView
-	        android:id="@+id/textView8"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_alignRight="@+id/btAddPhoto"
-	        android:layout_below="@+id/textView7"
-	        android:layout_marginRight="20dp"
-	        android:text="@string/clickText" />
-	
-	    <TextView
-	        android:id="@+id/textView9"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_alignLeft="@+id/textView6"
-	        android:layout_below="@+id/textView8"
-	        android:layout_marginTop="29dp"
-	        android:text="@string/Location" />
-	
-	    <Button
-	        android:id="@+id/btSaveRecorder"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_alignBaseline="@+id/textView9"
-	        android:layout_alignBottom="@+id/textView9"
-	        android:layout_alignLeft="@+id/textView8"
-	        android:text="@string/btLocation" />
-
-	    <TextView
-	        android:id="@+id/textView10"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_alignLeft="@+id/textView9"
-	        android:layout_below="@+id/btSaveRecorder"
-	        android:layout_marginTop="40dp"
-	        android:text="@string/btLocation" />
-
-	    <TextView
-	        android:id="@+id/textView11"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_alignLeft="@+id/textView13"
-	        android:layout_below="@+id/textView10"
-	        android:text="@string/location" />
-
-	    <TextView
-	        android:id="@+id/twLocation1"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_alignLeft="@+id/textView7"
-	        android:layout_below="@+id/textView11"
-	        android:layout_marginTop="50dp"
-	        android:text="@string/btLocation" />
-
-	    <TextView
-	        android:id="@+id/textView13"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_alignBottom="@+id/twLocation1"
-	        android:layout_alignLeft="@+id/btAddVideo1"
-	        android:layout_marginLeft="11dp"
-	        android:text="@string/location" />
-	
-	</RelativeLayout>
-	
-</ScrollView>
-<LinearLayout 
-	    android:background="#333"
+    android:layout_height="fill_parent"
+    android:layout_above="@+id/loADDSCREEN"
+     >
+	<ScrollView 
+	    android:id="@+id/ScrollView1"
 	    android:layout_width="fill_parent"
-	    android:layout_height="wrap_content"
-	    android:orientation="horizontal"
-	    android:layout_alignParentBottom="true">
+	    android:layout_height="wrap_content" >
+	
+		<RelativeLayout
+		    android:id="@+id/rlLayout"
+		    android:layout_width="match_parent"
+		    android:layout_height="wrap_content"
+		    android:paddingBottom="@dimen/activity_vertical_margin"
+		    android:paddingLeft="@dimen/activity_horizontal_margin"
+		    android:paddingRight="@dimen/activity_horizontal_margin"
+		    android:paddingTop="@dimen/activity_vertical_margin" >
+		
+		    <TextView
+		        android:id="@+id/textView1"
+		        android:layout_width="fill_parent"
+		        android:layout_height="wrap_content"
+		        android:layout_alignParentLeft="true"
+		        android:layout_alignParentTop="true"
+		        android:text="@string/IRemember" />
+		
+		
+		    <TextView
+		        android:id="@+id/textView2"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_alignLeft="@+id/textView1"
+		        android:layout_below="@+id/textView1"
+		        android:layout_marginTop="30dp"
+		        android:text="@string/title" />
+		
+		    <EditText
+		        android:id="@+id/etTitle"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_alignBaseline="@+id/textView2"
+		        android:layout_alignBottom="@+id/textView2"
+		        android:layout_alignRight="@+id/textView1"
+		        android:ems="10" android:inputType="text">
+				        <requestFocus />
+		    </EditText>
+		    
+		    <TextView
+		        android:id="@+id/textView3"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_alignLeft="@+id/textView2"
+		        android:layout_below="@+id/etTitle"
+		        android:layout_marginTop="35dp"
+		        android:text="@string/body" />
+		
+		   <EditText
+		        android:id="@+id/etBody"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_alignBaseline="@+id/textView3"
+		        android:layout_alignBottom="@+id/textView3"
+		        android:layout_alignLeft="@+id/etTitle"
+		        android:ems="10" android:inputType="text">
+		
+
+		    </EditText>
+		
+		    <TextView
+		        android:id="@+id/textView4"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_alignParentLeft="true"
+		        android:layout_below="@+id/etBody"
+		        android:layout_marginTop="34dp"
+		        android:text="@string/addAudioLink" />
+		
+		    <Button
+		        android:id="@+id/btRecorder"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_alignBaseline="@+id/textView4"
+		        android:layout_alignBottom="@+id/textView4"
+		        android:layout_alignRight="@+id/etBody"
+		        android:text="@string/AudioButton" />
+		
+		    <TextView
+		        android:id="@+id/textView5"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_alignRight="@+id/textView4"
+		        android:layout_below="@+id/btRecorder"
+		        android:layout_marginTop="40dp"
+		        android:text="@string/Addvideo" />
+		
+		    <Button
+		        android:id="@+id/btAddVideo1"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_alignBaseline="@+id/textView5"
+		        android:layout_alignBottom="@+id/textView5"
+		        android:layout_alignRight="@+id/btRecorder"
+		        android:text="@string/addVideoLink" />
+		
+		    <EditText
+		        android:id="@+id/etImageName"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_alignRight="@+id/btAddVideo1"
+		        android:layout_alignTop="@+id/textView6"
+		        android:ems="10" android:inputType="text"/>
+		
+		    <TextView
+		        android:id="@+id/textView6"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_alignLeft="@+id/textView4"
+		        android:layout_below="@+id/btAddVideo1"
+		        android:layout_marginTop="32dp"
+		        android:text="@string/imageName" />
+		
+		    <Button
+		        android:id="@+id/btAddPhoto"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_alignRight="@+id/etImageName"
+		        android:layout_below="@+id/etImageName"
+		        android:layout_marginTop="14dp"
+		        android:text="@string/btAddPhoto" />
+		
+		    <TextView
+		        android:id="@+id/textView7"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_alignLeft="@+id/textView5"
+		        android:layout_below="@+id/btAddPhoto"
+		        android:layout_marginTop="18dp"
+		        android:text="@string/storyTime" />
+		
+		    <TextView
+		        android:id="@+id/twSetTime"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_alignRight="@+id/btAddPhoto"
+		        android:layout_below="@+id/textView7"
+		        android:layout_marginRight="20dp"
+		        android:text="@string/clickText" />
+		
+		    <TextView
+		        android:id="@+id/textView9"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_alignLeft="@+id/textView6"
+		        android:layout_below="@+id/twSetTime"
+		        android:layout_marginTop="29dp"
+		        android:text="@string/Location" />
+		
+		    <Button
+		        android:id="@+id/btGetlocation"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_alignBaseline="@+id/textView9"
+		        android:layout_alignBottom="@+id/textView9"
+		        android:layout_alignLeft="@+id/twSetTime"
+		        android:text="@string/btLocation" />
+	
+		    <TextView
+		        android:id="@+id/textView10"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_alignLeft="@+id/textView9"
+		        android:layout_below="@+id/btGetlocation"
+		        android:layout_marginTop="40dp"
+		        android:text="@string/btLocation" />
+	
+		    <TextView
+		        android:id="@+id/twLongitude"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_alignLeft="@+id/twLatitude"
+		        android:layout_below="@+id/textView10"
+		        android:text="@string/location" />
+	
+		    <TextView
+		        android:id="@+id/twLocation1"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_alignLeft="@+id/textView7"
+		        android:layout_below="@+id/twLongitude"
+		        android:layout_marginTop="50dp"
+		        android:text="@string/btLocation" />
+	
+		    <TextView
+		        android:id="@+id/twLatitude"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_alignBottom="@+id/twLocation1"
+		        android:layout_alignLeft="@+id/btAddVideo1"
+		        android:layout_marginLeft="11dp"
+		        android:text="@string/location" />
+		
+		</RelativeLayout>
+		
+	</ScrollView>
+</RelativeLayout>
+<LinearLayout
+    android:id="@+id/loADDSCREEN"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:layout_alignParentBottom="true"
+    android:background="#333"
+    android:orientation="horizontal" >
 	    
 	    <Button
+	        android:id="@+id/btCreate"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:text="@string/btCreate"
 	        tools:ignore="ButtonStyle" />
 
 	    <Button
+	        android:id="@+id/btClearCreate"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:text="@string/btClear"
 	        tools:ignore="ButtonStyle" />
 
 	    <Button
+	        android:id="@+id/btCancelCreate"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:text="@string/btCancel"
