--- a/IRemember/res/layout/activity_photo_capture.xml
+++ b/IRemember/res/layout/activity_photo_capture.xml
@@ -20,7 +20,7 @@
 		android:layout_width="wrap_content" 
 		android:visibility="invisible"
 		android:layout_centerInParent="true"
-		android:id="@+id/videoView1" />
+		android:id="@+id/viewVideo" />
     
     <RelativeLayout
         android:layout_alignParentBottom="true"
