--- a/IRemember/res/layout/fragment_add_screen.xml
+++ b/IRemember/res/layout/fragment_add_screen.xml
@@ -23,7 +23,7 @@
 		    android:paddingTop="@dimen/activity_vertical_margin" >
 		
 		    <TextView
-		        android:id="@+id/textView1"
+		        android:id="@+id/tvTitle"
 		        android:layout_width="fill_parent"
 		        android:layout_height="wrap_content"
 		        android:layout_alignParentLeft="true"
@@ -35,8 +35,8 @@
 		        android:id="@+id/textView2"
 		        android:layout_width="wrap_content"
 		        android:layout_height="wrap_content"
-		        android:layout_alignLeft="@+id/textView1"
-		        android:layout_below="@+id/textView1"
+		        android:layout_alignLeft="@+id/tvTitle"
+		        android:layout_below="@+id/tvTitle"
 		        android:layout_marginTop="30dp"
 		        android:text="@string/title" />
 		
@@ -46,7 +46,7 @@
 		        android:layout_height="wrap_content"
 		        android:layout_alignBaseline="@+id/textView2"
 		        android:layout_alignBottom="@+id/textView2"
-		        android:layout_alignRight="@+id/textView1"
+		        android:layout_alignRight="@+id/tvTitle"
 		        android:ems="10" android:inputType="text">
 				        <requestFocus />
 		    </EditText>
