--- a/IRemember/res/layout/activity_add_event.xml
+++ b/IRemember/res/layout/activity_add_event.xml
@@ -309,8 +309,9 @@
 
         <ImageView
             android:id="@+id/AddViewImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="160dp"
+            android:layout_height="90dp"
+            android:layout_marginTop="20dp"
             android:src="@drawable/nexus" />
 
             <Gallery
