--- a/IRemember/res/layout/activity_view_event.xml
+++ b/IRemember/res/layout/activity_view_event.xml
@@ -184,7 +184,8 @@
          <VideoView
              android:id="@+id/viewVideo"
              android:layout_width="wrap_content"
-             android:layout_height="wrap_content" 
+             android:layout_height="300dp" 
+             android:layout_centerInParent="true"
              android:layout_below="@+id/videoCard"/>
          
     </RelativeLayout>
@@ -218,6 +219,7 @@
 
         <TextView
             android:id="@+id/tvTime"
+            android:layout_centerInParent="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/timeCard"
